Added PID file to config. few minor tweaks

--- a/bot.conf
+++ b/bot.conf
@@ -28,7 +28,7 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 ##############################################################
 
 [Bot]
-Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
+Nick = Navn2 ;The bots Nickname, this is the nickname of the bot (default: Navn)
 Channel = #Computers ;The main channel, joins this channel on startup (default: #Test)
 Owner = Justasic ;Bot Owner, used to show who manages the bot (default: Derp)
 NickServ_Account = testaccount ;NickServ account to identify (comment out or remove if you dont have one)
@@ -42,4 +42,5 @@ NickServ_Password = mypassword ;NickServ password (comment out or remove if you 
 #   	     These are the logging options.	    	     #
 ##############################################################
 [Log]
-Log_File = navn.log  ;defines the log file (Default: navn.log)
+Log_File = navn.log ;defines the log file (Default: navn.log)
+PID_File = navn.pid ;defines the pid file to use (Default: navn.pid) 
