Added some ownership changing stuff.. i dont even know.. to tired lol look at the diff

--- a/bot.conf
+++ b/bot.conf
@@ -29,8 +29,9 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 
 [Bot]
 Nick = Navn2 ;The bots Nickname, this is the nickname of the bot (default: Navn)
-Channel = #Computers ;The main channel, joins this channel on startup (default: #Test)
+Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
 Owner = Justasic ;Bot Owner, used to show who manages the bot (default: Derp)
+Password = Test ;This is the owner password, it is used in changing owners, and much more. CANNOT HAVE SPACES! (default: Navn)
 NickServ_Account = testaccount ;NickServ account to identify (comment out or remove if you dont have one)
 NickServ_Password = mypassword ;NickServ password (comment out or remove if you dont have one)
 
