fixed some weird git screw up

--- a/bot.conf
+++ b/bot.conf
@@ -13,7 +13,7 @@
 #      !!READ THE WHOLE CONFIG BEFORE STARTING THE BOT!!     #
 ##############################################################
 [Connect]
-Server = irc.flux-net.net ;The server, Server to connect to (default: irc.flux-net.net)
+Server = 10.11.1.188 ;The server, Server to connect to (default: irc.flux-net.net)
 #Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GEOCS (Default: Bots version)
 Ident = Navn ;The bots Ident shown in the GEOCS (Default: Navn)
 Port = 6667 ;The port used to connect to the server. (Default: 6667)
