finished off channel logger (though for whatever reason it doesnt work right), added CTCP SOURCE, moved some functions to their proper files

--- a/bot.conf
+++ b/bot.conf
@@ -21,8 +21,8 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 
 
 ##############################################################
-# 							     #
-# 			Bot Configuration.		     #
+#							     #
+#			Bot Configuration.		     #
 #							     #
 # These are the options for the bot when it joins the server.#
 ##############################################################
@@ -37,21 +37,30 @@ Password = Test ;This is the owner password, it is used in changing owners, and 
 
 
 ##############################################################
-# 							     #
-# 	         Logging Configuration.		       	     #
 #							     #
-#   	     These are the logging options.	    	     #
+#	         Logging Configuration. 		     #
+#							     #
+#	     These are the logging options.		     #
 ##############################################################
 [Log]
 Log_File = navn.log ;defines the log file (Default: navn.log)
 PID_File = navn.pid ;defines the pid file to use (Default: navn.pid) 
 
 ##############################################################
-# 							     #
-# 	         Oper Configuration.		       	     #
 #							     #
-#   	     This is where the oper info goes	    	     #
+#			Oper Configuration.     	     #
+#							     #
+#	     This is where the oper info goes   	     #
 ##############################################################
 [Oper]
 #Oper_Username = ;Operator account username (comment out or remove if you dont have one)
 #Oper_Password = ;Operator Password (comment out or remove if you dont have one)
+
+##############################################################
+#							     #
+#		     Module Configuration.      	     #
+#							     #
+#	     This is where the oper info goes   	     #
+##############################################################
+[Modules]
+LogChannel = #Test ;For the Channel Logger module (comment out or remove if you don't want to log)
