--- a/bot.conf
+++ b/bot.conf
@@ -15,7 +15,7 @@
 [Connect]
 Server = irc.flux-net.net ;The server, Server to connect to (default: irc.flux-net.net)
 #Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GEOCS (Default: Bots version)
-Ident = Navn ;The bots Ident shown in the GEOCS (Default: Navn)
+Ident = Riista ;The bots Ident shown in the GEOCS (Default: Navn)
 Port = 6667 ;The port used to connect to the server. (Default: 6667)
 
 
@@ -28,8 +28,8 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 ##############################################################
 
 [Bot]
-Nick = Navn2 ;The bots Nickname, this is the nickname of the bot (default: Navn)
-Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
+Nick = Riista ;The bots Nickname, this is the nickname of the bot (default: Navn)
+Channel = #game ;The main channel, joins this channel on startup (default: #Test)
 Owner = lordofsraam ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. CANNOT HAVE SPACES! (default: Navn)
 #NickServ_Account = testaccount ;NickServ account to identify (comment out or remove if you dont have one)
