Added '/msg navn pid' command to get the pid, fixed incorrect git links.

--- a/bot.conf
+++ b/bot.conf
@@ -30,7 +30,7 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 [Bot]
 Nick = Navn2 ;The bots Nickname, this is the nickname of the bot (default: Navn)
 Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
-Owner = lordofsraam ;Bot Owner, used to show who manages the bot (default: Derp)
+Owner = euyirtyi ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. CANNOT HAVE SPACES! (default: Navn)
 #NickServ_Account = Navn ;NickServ account to identify (comment out or remove if you dont have one)
 #NickServ_Password = mypassword ;NickServ password (comment out or remove if you dont have one)
@@ -63,4 +63,4 @@ PID_File = navn.pid ;defines the pid file to use (Default: navn.pid)
 #	     This is where the oper info goes   	     #
 ##############################################################
 [Modules]
-LogChannel = #Test ;For the Channel Logger module (comment out or remove if you don't want to log)
+#LogChannel = #Test ;For the Channel Logger module (comment out or remove if you don't want to log)
