--- a/bot.conf
+++ b/bot.conf
@@ -6,7 +6,7 @@
 # File Type: ini					     #
 # There are a few ways of doing comments in this config      #
 # 1. # (like python)					     #
-# 2. ; (semi-colon)					     #
+# 2. ; (like mIRC)					     #
 # 							     #
 # Save as bot.conf and start navn with ./navn		     #
 # 							     #
@@ -15,33 +15,52 @@
 [Connect]
 Server = irc.flux-net.net ;The server, Server to connect to (default: irc.flux-net.net)
 #Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GEOCS (Default: Bots version)
-Ident = Riista ;The bots Ident shown in the GEOCS (Default: Navn)
+Ident = Navn ;The bots Ident shown in the GEOCS (Default: Navn)
 Port = 6667 ;The port used to connect to the server. (Default: 6667)
 
 
 
 ##############################################################
-# 							     #
-# 			Bot Configuration.		     #
+#							     #
+#			Bot Configuration.		     #
 #							     #
 # These are the options for the bot when it joins the server.#
 ##############################################################
 
 [Bot]
-Nick = Riista ;The bots Nickname, this is the nickname of the bot (default: Navn)
-Channel = #game ;The main channel, joins this channel on startup (default: #Test)
-Owner = lordofsraam ;Bot Owner, used to show who manages the bot (default: Derp)
+Nick = Navn2 ;The bots Nickname, this is the nickname of the bot (default: Navn)
+Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
+Owner = Justasic ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. CANNOT HAVE SPACES! (default: Navn)
-#NickServ_Account = testaccount ;NickServ account to identify (comment out or remove if you dont have one)
+#NickServ_Account = Navn ;NickServ account to identify (comment out or remove if you dont have one)
 #NickServ_Password = mypassword ;NickServ password (comment out or remove if you dont have one)
 
 
 ##############################################################
-# 							     #
-# 	         Logging Configuration.		       	     #
 #							     #
-#   	     These are the logging options.	    	     #
+#	         Logging Configuration. 		     #
+#							     #
+#	     These are the logging options.		     #
 ##############################################################
 [Log]
 Log_File = navn.log ;defines the log file (Default: navn.log)
 PID_File = navn.pid ;defines the pid file to use (Default: navn.pid) 
+
+##############################################################
+#							     #
+#			Oper Configuration.     	     #
+#							     #
+#	     This is where the oper info goes   	     #
+##############################################################
+[Oper]
+#Oper_Username = ;Operator account username (comment out or remove if you dont have one)
+#Oper_Password = ;Operator Password (comment out or remove if you dont have one)
+
+##############################################################
+#							     #
+#		     Module Configuration.      	     #
+#							     #
+#	     This is where the oper info goes   	     #
+##############################################################
+[Modules]
+LogChannel = #Test ;For the Channel Logger module (comment out or remove if you don't want to log)
