--- a/bot.conf
+++ b/bot.conf
@@ -14,8 +14,8 @@
 ##############################################################
 [Connect]
 Server = irc.flux-net.net ;The server, Server to connect to (default: irc.flux-net.net)
-#Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GEOCS (Default: Bots version)
-Ident = Navn ;The bots Ident shown in the GEOCS (Default: Navn)
+#Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GECOS (Default: Bots version)
+Ident = Navn ;The bots Ident shown in the GECOS (Default: Navn)
 Port = 6667 ;The port used to connect to the server. (Default: 6667)
 
 
