Fixed some weirdness with nickserv autoidentify

--- a/bot.conf
+++ b/bot.conf
@@ -29,11 +29,11 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 
 [Bot]
 Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
-Channel = #computers ;The main channel, joins this channel on startup (default: #Test)
-Owner = lordofsraam ;Bot Owner, used to show who manages the bot (default: Derp)
+Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
+Owner = RainShadow ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. CANNOT HAVE SPACES! (default: Navn)
 #NickServ_Account = Navn ;NickServ account to identify (comment out or remove if you dont have one)
-NickServ_Password = letmein ;NickServ password (comment out or remove if you dont have one)
+#NickServ_Password = letmein ;NickServ password (comment out or remove if you dont have one)
 
 
 ##############################################################
