--- a/bot.conf
+++ b/bot.conf
@@ -28,7 +28,7 @@ Port = 6667 ;The port used to connect to the server. (Default: 6667)
 ##############################################################
 
 [Bot]
-Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
+Nick = Navn2 ;The bots Nickname, this is the nickname of the bot (default: Navn)
 Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
 Owner = RainShadow ;Bot Owner, used to show who manages the bot (default: Derp)
 Password = Test ;This is the owner password, it is used in changing owners, and much more. CANNOT HAVE SPACES! (default: Navn)
