Successfuly got the make system working like it should, changed version strings as a result

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,28 +1,29 @@
-CC=c++
+CXX=c++
 PERL=./run-cc.pl
-IDIR=include/
-CFLAGS=-Wall -ansi -pipe -Wshadow -pedantic -g -I$(IDIR) -Iinireader/ -I.
+CFLAGS=-Wall -ansi -pipe -Wshadow -pedantic -g -Iinclude/ -Iinireader/ -I.
 LIBS=-lpthread
 EXECUTABLE=navn
 
-all:
+all: navn
+
+navn:
 	@echo "This bot was created in C++ by Lordofsraam and Justasic from Flux-Net"
 	@echo "This is probably the lamest make file i have ever seen -Justasic"
 	@echo " "
-	@$(PERL) $(CC) $(CFLAGS) -c main.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c misc.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c module.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c Socket.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c Sepstream.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c privmsg.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c command.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c channel.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c thread.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c timers.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c user.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c inireader/INIReader.cpp
-	@$(PERL) $(CC) $(CFLAGS) -c inireader/ini.c
-	@$(PERL) $(CC) $(CFLAGS) -o $(EXECUTABLE) main.o misc.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o ini.o $(LIBS)
+	@$(PERL) $(CXX) $(CFLAGS) -c main.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c misc.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c module.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c Socket.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c Sepstream.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c privmsg.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c command.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c channel.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c thread.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c timers.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c user.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c inireader/INIReader.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c inireader/ini.c
+	@$(PERL) $(CXX) $(CFLAGS) -o $(EXECUTABLE) main.o misc.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o ini.o $(LIBS)
 	@echo " "
 	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
