--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.67])
-AC_INIT(Navn, 2.0.1, http://flux-net.net/bugs/)
+AC_INIT([Navn], [2.0.1], [http://flux-net.net/bugs/])
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([main.cpp])
 AC_CONFIG_HEADERS([config.h])
