--- a/configure.in
+++ b/configure.in
@@ -11,6 +11,7 @@ AC_CONFIG_HEADERS([config.h])
 AC_PROG_CXX
 AC_PROG_CPP
 AC_PROG_MAKE_SET
+AC_LANG_CPLUSPLUS
 
 # Checks for libraries.
 # FIXME: Replace `main' with a function in `-lpthread':
