Added part of a module loader, needs some serious work to get working correctly though

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,9 @@
-CXX = @CXX@
+CXX = c++
 EXECUTABLE = @PACKAGE@
 PERL = $(srcdir)/run-cc.pl
 CFLAGS = -Wall -ansi -pipe -Wshadow -pedantic -g -I$(srcdir)/include -I$(srcdir)/inireader/ -I$(srcdir)
-LIBS = -lpthread
-
+LIBS = -lpthread -ldl
+MODFLAGS=-fPIC -g -ldl -lnsl -pthread -shared
 all: 
 	@echo "This bot was created in C++ by Lordofsraam and Justasic from Flux-Net"
 	@echo "Navn Version @VERSION@-with-netflix-and-chicken"
@@ -22,6 +22,8 @@ all:
 	@$(PERL) $(CXX) $(CFLAGS) -c inireader/INIReader.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c inireader/ini.c
 	@$(PERL) $(CXX) $(CFLAGS) -o $(EXECUTABLE) main.o misc.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o ini.o $(LIBS)
+	@$(PERL) $(CXX) $(CFLAGS) -c testmod.cpp
+	@$(PERL) $(CXX) $(MODFLAGS) -o testmod.so testmod.o
 	@echo " "
 	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
