--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ EXECUTABLE = @PACKAGE@
 PERL = $(srcdir)/run-cc.pl
 CFLAGS = -Wall -ansi -pipe -Wshadow -pedantic -g -I$(srcdir)/include -I$(srcdir)/inireader/ -I$(srcdir)
 LIBS = -lpthread -ldl
-MODFLAGS=-fPIC -g -ldl -lnsl -pthread -shared
+MODFLAGS = -fPIC -g -rdynamic -lnsl $(LIBS) -shared -Wl,-soname,
 all: 
 	@echo "This bot was created in C++ by Lordofsraam and Justasic from Flux-Net"
 	@echo "Navn Version @VERSION@-with-netflix-and-chicken"
@@ -23,9 +23,9 @@ all:
 	@$(PERL) $(CXX) $(CFLAGS) -c inireader/ini.c
 	@$(PERL) $(CXX) $(CFLAGS) -o $(EXECUTABLE) main.o misc.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o ini.o $(LIBS)
 	@$(PERL) $(CXX) $(CFLAGS) -c testmod.cpp
-	@$(PERL) $(CXX) $(MODFLAGS) -o testmod.so testmod.o
+	@$(PERL) $(CXX) $(MODFLAGS)testmod.so -o testmod.so testmod.o
 	@echo " "
 	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
 clean:
-	rm -f *.o $(EXECUTABLE) config.h
+	rm -f *.o *.so $(EXECUTABLE) config.h
