--- a/Makefile.in
+++ b/Makefile.in
@@ -154,7 +154,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 EXECUTABLE = @PACKAGE@
 PERL = $(srcdir)/run-cc.pl
-MODFLAGS = -fPIC -g -ldl -lnsl -pthread -shared
+MODFLAGS = -fPIC -g -rdynamic -lnsl $(LIBS) -shared -Wl,-soname,
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-am
 
@@ -494,12 +494,12 @@ all:
 	@$(PERL) $(CXX) $(CFLAGS) -c inireader/ini.c
 	@$(PERL) $(CXX) $(CFLAGS) -o $(EXECUTABLE) main.o misc.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o ini.o $(LIBS)
 	@$(PERL) $(CXX) $(CFLAGS) -c testmod.cpp
-	@$(PERL) $(CXX) $(MODFLAGS) -o testmod.so testmod.o
+	@$(PERL) $(CXX) $(MODFLAGS)testmod.so -o testmod.so testmod.o
 	@echo " "
 	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
 clean:
-	rm -f *.o $(EXECUTABLE) config.h
+	rm -f *.o *.so $(EXECUTABLE) config.h
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
