Rewrote the INIReader to C++, this make it more effecent and even smaller, config does not change. Fixed crash in signal handler

--- a/bot.conf
+++ b/bot.conf
@@ -5,7 +5,7 @@
 # 							     #
 # File Type: ini					     #
 # There are a few ways of doing comments in this config      #
-# 1. # (like python)					     #
+# 1. # (like python) You can't use # with midline comments   #
 # 2. ; (like mIRC)					     #
 # 							     #
 # Save as bot.conf and start navn with ./navn		     #
@@ -13,7 +13,7 @@
 #      !!READ THE WHOLE CONFIG BEFORE STARTING THE BOT!!     #
 ##############################################################
 [Connect]
-Server = irc.flux-net.net ;The server, Server to connect to (default: irc.flux-net.net)
+Server = irc.Flux-Net.net ;The server, Server to connect to (default: irc.flux-net.net)
 #Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GECOS (Default: Bots version)
 Ident = Navn ;The bots Ident shown in the GECOS (Default: Navn)
 Port = 6667 ;The port used to connect to the server. (Default: 6667)
