Fixed INIParser throwing errors on empty lines, added better error handling on config reading and on startup

--- a/bot.conf
+++ b/bot.conf
@@ -17,6 +17,7 @@ Server = irc.Flux-Net.net ;The server, Server to connect to (default: irc.flux-n
 #Realname = Navn Bot ;The bots Realname, this is the realname of the bot shown in the GECOS (Default: Bots version)
 Ident = Navn ;The bots Ident shown in the GECOS (Default: Navn)
 Port = 6667 ;The port used to connect to the server. (Default: 6667)
+PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
 
 
 
@@ -43,8 +44,7 @@ Password = Test ;This is the owner password, it is used in changing owners, and 
 #	     These are the logging options.		     #
 ##############################################################
 [Log]
-Log_File = navn.log ;defines the log file (Default: navn.log)
-PID_File = navn.pid ;defines the pid file to use (Default: navn.pid) 
+Log_File = navn.log ;defines the log file (Default: navn.log) 
 
 ##############################################################
 #							     #
