--- a/bot.example.conf
+++ b/bot.example.conf
@@ -28,12 +28,12 @@ PID File = navn.pid ;defines the pid file to use (Default: navn.pid)
 ##############################################################
 
 [Bot]
-Nick = Navn2 ;The bots Nickname, this is the nickname of the bot (default: Navn)
+Nick = Navn ;The bots Nickname, this is the nickname of the bot (default: Navn)
 Channel = #Test ;The main channel, joins this channel on startup (default: #Test)
-Owner = NightShadow ;Bot Owner, used to show who manages the bot (default: Derp)
-Password = Test ;This is the owner password, it is used in changing owners, and much more. CANNOT HAVE SPACES! (default: Navn)
+Owner = n00b ;Bot Owner, used to show who manages the bot (default: Derp)
+Password = Test ;This is the owner password, it is used in changing owners, and much more. (default: Navn)
 #NickServ_Account = Navn ;NickServ account to identify (comment out or remove if you dont have one)
-#NickServ_Password = letmein ;NickServ password (comment out or remove if you dont have one)
+#NickServ_Password = n00bpass ;NickServ password (comment out or remove if you dont have one)
 
 
 ##############################################################
