--- a/Makefile.in
+++ b/Makefile.in
@@ -480,6 +480,7 @@ all:
 	@echo "Navn Version @VERSION@-with-netflix-and-chicken"
 	@echo " "
 	@$(PERL) $(CXX) $(CFLAGS) -c main.cpp
+	@$(PERL) $(CXX) $(CFLAGS) -c process.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c misc.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c module.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c Socket.cpp
@@ -491,7 +492,7 @@ all:
 	@$(PERL) $(CXX) $(CFLAGS) -c timers.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c user.cpp
 	@$(PERL) $(CXX) $(CFLAGS) -c INIReader.cpp
-	@$(PERL) $(CXX) $(CFLAGS) -o $(EXECUTABLE) main.o misc.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o $(LIBS)
+	@$(PERL) $(CXX) $(CFLAGS) -o $(EXECUTABLE) main.o misc.o module.o Socket.o Sepstream.o privmsg.o command.o channel.o thread.o timers.o user.o INIReader.o process.o $(LIBS)
 	@$(PERL) $(CXX) $(CFLAGS) -c testmod.cpp
 	@$(PERL) $(CXX) $(MODFLAGS)testmod.so -o testmod.so testmod.o
 	@echo " "
