--- a/bot.example.conf
+++ b/bot.example.conf
@@ -63,3 +63,4 @@ Log_File = navn.log ;defines the log file (Default: navn.log)
 ##############################################################
 [Modules]
 LogChannel = #Test ;For the Channel Logger module (comment out or remove if you don't want to log)
+ModuleDir = modules/ ;This will load modules in any directory in the binary runtime, do not use absolute paths
