--- a/Makefile.in
+++ b/Makefile.in
@@ -505,6 +505,10 @@ all:
 	@$(PERL) $(CXX) $(MODFLAGS)modules/modulehandler.so -o modules/modulehandler.so modulehandler.o
 	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_system.cpp
 	@$(PERL) $(CXX) $(MODFLAGS)modules/m_system.so -o modules/m_system.so m_system.o
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/searcher.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/searcher.so -o modules/searcher.so searcher.o
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/m_dns.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/m_dns.so -o modules/m_dns.so m_dns.o
 	@echo " "
 	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
