--- a/Makefile.in
+++ b/Makefile.in
@@ -515,6 +515,8 @@ all:
 	@$(PERL) $(CXX) $(MODFLAGS)modules/ctcp.so -o modules/ctcp.so ctcp.o
 	@$(PERL) $(CXX) $(CFLAGS) -c modules/encyclopedia.cpp
 	@$(PERL) $(CXX) $(MODFLAGS)modules/encyclopedia.so -o modules/encyclopedia.so encyclopedia.o
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/weather.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/weather.so -o modules/weather.so weather.o
 	@echo " "
 	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
