Updated channel_logger, added some more FOREACH_MOD hooks, ready to push :D

--- a/Makefile.in
+++ b/Makefile.in
@@ -521,6 +521,8 @@ all:
 	@$(PERL) $(CXX) $(MODFLAGS)modules/world_clock.so -o modules/world_clock.so world_clock.o
 	@$(PERL) $(CXX) $(CFLAGS) -c modules/da_goat.cpp
 	@$(PERL) $(CXX) $(MODFLAGS)modules/da_goat.so -o modules/da_goat.so da_goat.o
+	@$(PERL) $(CXX) $(CFLAGS) -c modules/channel_logger.cpp
+	@$(PERL) $(CXX) $(MODFLAGS)modules/channel_logger.so -o modules/channel_logger.so channel_logger.o
 	@echo " "
 	@echo "Build complete. Run './$(EXECUTABLE)' to execute the binary."
 
